# fairy-garden

./: .gitignore  CMakeLists.txt  Constants.h  attack_data.cpp  attack_data.h  background_fragment_shader.glsl  collectible_game_object.cpp  collectible_game_object.h  enemy_game_object.cpp  enemy_game_object.h  explosion_game_object.cpp  explosion_game_object.h  game.cpp  game.h  game_object.cpp  game_object.h  ghost_fragment_shader.glsl  main.cpp  move_data.cpp  move_data.h  particle_fragment_shader.glsl  particle_vertex_shader.glsl  patrol_data.cpp  patrol_data.h  player_game_object.cpp  player_game_object.h  projectile_game_object.cpp  projectile_game_object.h  readme.txt  shader.cpp  text_fragment_shader.glsl  timer.cpp  timer.h
clip/: tex-background-3.clip  tex-background-4.clip  tex_dying_earth_link.clip  tex_fairy_dust.clip  tex_magic_missile_enemy.clip  tex_player.clip  tex_rainbow_fairy_dust.clip  tex_water_wave_enemy.clip
collectibles/: dark_fairy_dust_collectible.cpp  dark_fairy_dust_collectible.h  fairy_dust_collectible.cpp  fairy_dust_collectible.h  rainbow_fairy_dust_collectible.cpp  rainbow_fairy_dust_collectible.h
data/: game_object_data.h  move_data.h  weapon_data.h
enemies/: dark_fairy_queen.cpp  dark_fairy_queen.h  dying_earth_enemy.cpp  dying_earth_enemy.h  dying_earth_enemy_link.cpp  dying_earth_enemy_link.h  enemy_game_object.cpp  enemy_game_object.h  enemy_spawner.cpp  enemy_spawner.h  magic_missile_enemy.cpp  magic_missile_enemy.h  spawner.cpp  spawner.h  water_wave_enemy.cpp  water_wave_enemy.h
obstacles/: wall.cpp  wall.h
particles/: particle_system.cpp  particle_system.h  particles.cpp  particles.h
projectiles/: magic_missile_projectile.cpp  magic_missile_projectile.h  player_projectile.cpp  player_projectile.h  water_wave_projectile.cpp  water_wave_projectile.h
textures/: tex-background-1.clip  tex-background-2.clip  tex_dark_fairy_dust.clip  tex_dark_fairy_queen.clip  tex_dying_earth_enemy.clip  tex_fairy_dust.clip  tex_magic_missile_enemy.clip  tex_player.clip  tex_rainbow_fairy_dust.kra
ui/: text_game_object.cpp  text_game_object.h
weapon_behaviour/: projectile_weapon_behaviour.cpp  projectile_weapon_behaviour.h  weapon_behaviour.cpp  weapon_behaviour.h
weapons/: default_player_weapon.cpp  default_player_weapon.h  interval_weapon.cpp  interval_weapon.h  magic_missile_weapon.cpp  magic_missile_weapon.h  shotgun_player_weapon.cpp  shotgun_player_weapon.h  water_wave_weapon.cpp  water_wave_weapon.h  weapon.cpp  weapon.h
